# iNARK_Graphical

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  graphic_edge.cpp  graphic_edge.h  graphic_vertex.cpp  graphic_vertex.h  handleitem.cpp  handleitem.h  logical_edge.cpp  logical_edge.h  logical_vertex.cpp  logical_vertex.h  main.cpp  maininterface.cpp  maininterface.h  maininterface.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/popups/: CMakeLists.txt  Makefile  cmake_install.cmake  l1_popup.cpp  l1_popup.h  l1_popup.ui  l2_popup.cpp  l2_popup.h  l2_popup.ui  l3_popup.cpp  l3_popup.h  l3_popup.ui  l4_popup.cpp  l4_popup.h  l4_popup.ui  l5_popup.cpp  l5_popup.h  l5_popup.ui  ports_popup.cpp  ports_popup.h  ports_popup.ui  tab_popup.cpp  tab_popup.h  tab_popup.ui
